overflow hidden on last animation & fix of tey last details

--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -10,8 +10,17 @@
   }
   & img {
     width: 100%;
-    height: 231px;
+    height: 167px;
     object-fit: cover;
+    object-position: 0 60%;
     border-radius: 15px 15px 0 0;
+  }
+  & h3 {
+    margin-bottom: 2px;
+    margin-top: 12px;
+  }
+  & p {
+    margin-top: 2px;
+    margin-bottom: 12px;
   }
 }
