--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -362,7 +362,7 @@ a:visited {
 }
 .choices {
   position: relative;
-  height: 69px;
+  height: 62.5px;
   opacity: 0;
   background: white;
   margin-bottom: 10px;
@@ -373,6 +373,7 @@ a:visited {
   border-radius: 15px;
   box-shadow: 3px 3px 10px 2px #cecece;
   cursor: pointer;
+  overflow: hidden;
 }
 .choices:hover .choices__price {
   right: 80px;
@@ -419,6 +420,7 @@ a:visited {
 }
 .choices__dish {
   padding-left: 8px;
+  width: 500px;
 }
 .choices__price {
   position: absolute;
@@ -428,11 +430,16 @@ a:visited {
   transition: all 500ms ease-in-out;
 }
 .choices p {
+  font-size: 0.8rem;
   margin-top: 5px;
+  width: 100%;
+}
+.choices h3 {
+  font-size: 0.9rem;
 }
 
 .choices-whole {
-  width: 100%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -491,11 +498,9 @@ a:visited {
 @media screen and (min-width: 320px) {
   .choices p {
     width: 200px;
-    font-size: 0.9rem;
   }
   .choices h3 {
     width: 200px;
-    font-size: 0.9rem;
   }
   .choices:hover p {
     width: 100px;
@@ -507,7 +512,7 @@ a:visited {
 @media screen and (min-width: 375px) {
   .choices p {
     width: 280px;
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .choices h3 {
     width: 280px;
@@ -522,10 +527,10 @@ a:visited {
 }
 @media screen and (min-width: 425px) {
   .choices p {
-    width: 300px;
+    width: 500px;
   }
   .choices h3 {
-    width: 300px;
+    width: 500px;
   }
   .choices:hover p {
     width: 250px;
@@ -535,11 +540,22 @@ a:visited {
   }
 }
 @media screen and (min-width: 480px) {
+  .choices p {
+    font-size: 1rem;
+  }
   .choices:hover p {
     width: 300px;
   }
   .choices:hover h3 {
     width: 300px;
+  }
+}
+@media screen and (min-width: 550px) {
+  .choices:hover p {
+    width: 500px;
+  }
+  .choices:hover h3 {
+    width: 500px;
   }
 }
 .super-card {
@@ -722,10 +738,20 @@ a:visited {
 }
 .card img {
   width: 100%;
-  height: 231px;
+  height: 167px;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 0 60%;
+     object-position: 0 60%;
   border-radius: 15px 15px 0 0;
+}
+.card h3 {
+  margin-bottom: 2px;
+  margin-top: 12px;
+}
+.card p {
+  margin-top: 2px;
+  margin-bottom: 12px;
 }
 
 .menu__heading {
