--- a/assets/styles/layout/_choices.scss
+++ b/assets/styles/layout/_choices.scss
@@ -1,6 +1,6 @@
 .choices {
   position: relative;
-  height: 69px;
+  height: 62.5px;
   opacity: 0;
   background: white;
   margin-bottom: 10px;
@@ -11,6 +11,7 @@
   border-radius: 15px;
   @include shadow-btn($color-shadow);
   cursor: pointer;
+  overflow: hidden;
   &:hover {
     .choices {
       &__price{
@@ -60,6 +61,7 @@
   }
   &__dish {
     padding-left: 8px;
+    width: 500px;
   }
   &__price {
     position: absolute;
@@ -68,13 +70,18 @@
     font-weight: 900;
     transition: all 500ms ease-in-out;
   }
-  & p {
+  p {
+    font-size: 0.8rem;
     margin-top: 5px;
+    width: 100%;
+  }
+  h3{
+    font-size: 0.9rem;
   }
 }
 
 .choices-whole {
-  width: 100%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -126,11 +133,9 @@
   .choices{
     p{
       width: 200px;
-      font-size: 0.9rem;
     }
     h3{
       width: 200px;
-      font-size: 0.9rem;
     }
     &:hover{
       p{
@@ -147,7 +152,7 @@
   .choices{
     p{
       width: 280px;
-      font-size: 1rem;
+      font-size: 0.9rem;
     }
     h3{
       width: 280px;
@@ -167,10 +172,10 @@
 @media screen and (min-width: 425px){
   .choices{
     p{
-      width: 300px;
+      width: 500px;
     }
     h3{
-      width: 300px;
+      width: 500px;
     }
     &:hover{
       p{
@@ -185,12 +190,28 @@
 
 @media screen and (min-width: 480px){
   .choices{
+    p{
+      font-size: 1rem;
+    }
     &:hover{
       p{
         width: 300px;
       }
       h3{
         width: 300px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 550px){
+  .choices{
+    &:hover{
+      p{
+        width: 500px;
+      }
+      h3{
+        width: 500px;
       }
     }
   }
